[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-nsiea"
version = "1.0.0"
description = "Label-preserving class-contrast neuro-symbolic evidence audit for cross-subject wearable activity recognition"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
